@@ -1,3 +1,13 @@
+2002-05-25  Glynn Foster <glynn.foster@sun.com>
+
+	* logview.c, actions.c: Some focus issues. Hum, we really
+	need to get mnemonics going here.
+
+2002-05-25  Narayana Pattipati <narayana.pattipati@wipro.com>
+
+	* logview.c: Treeview fix to prevent parent and child being
+	created for first action entry. Fixes #81942.
+
 2002-05-23  Aruna P R <aruna.pou@wipro.com>
 
 	* logview.c: Disable multiple openings of the same file. Fixes 
